# h3-pg

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile
.github/tmp-removed-workflows/: docs.yml
.github/workflows/: linux.yml  test.yml  windows.yml
.tmp-tools/: Dockerfile  build-with-cmake.sh  entrypoint.sh
cmake/: FetchH3.cmake  FindPostgreSQL.cmake
h3/: CMakeLists.txt
h3/sql/: CMakeLists.txt
h3/sql/install/: 13-opclass_gist.sql  99-postgis.sql
h3/src/: CMakeLists.txt
h3/src/include/: extension.in.h
h3/src/lib/: extension.c  hierarchy.c  indexing.c  inspection.c  miscellaneous.c  opclass_btree.c  opclass_gist.c  opclass_hash.c  operators.c  regions.c  traversal.c  type.c  uniedges.c
h3/test/: CMakeLists.txt
h3/test/expected/: postgis.out  regions.out
h3/test/sql/: opclass_gist.sql  postgis.sql  regions.sql
